tests/failed/06-unsupported-type.rs
use structified_enum::structify;

#[structify]
struct Foo;

fn main() {}